<resources>
    <string name="app_name">Nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="avatar_post">Post authors avatar</string>
    <string name="post_name">Netology. University of Internet Professions</string>
    <string name="post_data">15.06.2022</string>
    <string name="options">options</string>
    <string name="post_text">Hello, this is the new Netology! Once upon a time, Netology was read with online marketing intensives. Then there were courses on design, development, analytics and management. We grow ourselves and help students: from beginners to confident professionals. But the most important thing remains with us: we believe that everyone already has the power that makes you want more, aim higher, run faster. Our mission is to help get on the path of growth and start a chain of change → <a href="https://netolo.gy/fyb">https://netolo.gy/fyb</a></string>
    <string name="like">like post</string>
    <string name="count_like">0</string>
    <string name="share">Share</string>
    <string name="count_share">0</string>
    <string name="count_viewing">345</string>
    <string name="viewing">Viewing</string>
    <string name="remove">Remove</string>
    <string name="edit_text">Edit text</string>
    <string name="description_edit">Editing</string>
    <string name="edit">Edit post</string>
    <string name="description_cancelEditButton">Cancel edit</string>
    <string name="addPostText">Add post</string>
    <string name="editPostText">Edit message:</string>
    <string name="imageEdit">Image edit</string>
    <string name="button_ok">Add post</string>
    <string name="button_cancel">Button cancel</string>
    <string name="video">Video</string>
    <string name="enable_video">Enable video</string>
    <string name="video_url">Video url</string>
</resources>